--- a/proyecto1.html
+++ b/proyecto1.html
@@ -36,7 +36,7 @@
       </header>
       <section class="main-info">
         <img
-          src="/Proyecto1/MainImage1.png"
+          src="Proyecto1/MainImage1.png"
           alt="Imagen principal del Proyecto 1"
           class="main-image"
         />
@@ -47,16 +47,16 @@
       <section class="proyectos">
         <div class="grid">
           <div class="card">
-            <img src="/Proyecto1/Gallery1.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto1/Gallery1.png" alt="Imagen 1 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto1/Gallery2.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto1/Gallery2.png" alt="Imagen 2 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto1/Gallery3.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto1/Gallery3.png" alt="Imagen 3 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto1/Gallery4.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto1/Gallery4.png" alt="Imagen 4 de la galería" />
           </div>
         </div>
       </section>
