--- a/proyecto2.html
+++ b/proyecto2.html
@@ -30,7 +30,7 @@
       </header>
       <section class="main-info">
         <img
-          src="/Proyecto2/MainImage2.png"
+          src="Proyecto2/MainImage2.png"
           alt="Imagen principal del Proyecto 1"
           class="main-image"
         />
@@ -41,16 +41,16 @@
       <section class="proyectos">
         <div class="grid">
           <div class="card">
-            <img src="/Proyecto2/Gallery1.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto2/Gallery1.png" alt="Imagen 1 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto2/Gallery2.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto2/Gallery2.png" alt="Imagen 2 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto2/Gallery3.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto2/Gallery3.png" alt="Imagen 3 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto2/Gallery4.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto2/Gallery4.png" alt="Imagen 4 de la galería" />
           </div>
         </div>
       </section>
