--- a/proyecto4.html
+++ b/proyecto4.html
@@ -24,7 +24,7 @@
       </header>
       <section class="main-info">
         <img
-          src="/Proyecto4/MainImage.png"
+          src="Proyecto4/MainImage.png"
           alt="Imagen principal del Proyecto 1"
           class="main-image"
         />
@@ -35,16 +35,16 @@
       <section class="proyectos">
         <div class="grid">
           <div class="card">
-            <img src="/Proyecto4/Gallery1.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto4/Gallery1.png" alt="Imagen 1 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto4/Gallery2.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto4/Gallery2.png" alt="Imagen 2 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto4/Gallery3.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto4/Gallery3.png" alt="Imagen 3 de la galería" />
           </div>
           <div class="card">
-            <img src="/Proyecto4/Gallery4.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto4/Gallery4.png" alt="Imagen 4 de la galería" />
           </div>
         </div>
       </section>
