--- a/proyecto5.html
+++ b/proyecto5.html
@@ -12,26 +12,19 @@
       <header class="header">
         <div>
           <a href="index.html" class="button">Volver al Inicio</a>
-          <h1>The Doubtful Guest</h1>
-          <h2>Proyecto Web narrativo</h2>
+          <h1>Página Web de Labjusticia</h1>
+          <h2>
+            Desarrolo de la página del laboratorio para la Justicia Uniandes
+          </h2>
           <p class="description">
-            The Doubtful Guest es un proyecto web narrativo inspirado en el
-            cuento ilustrado de Edward Gorey. A través de recursos propios del
-            lenguaje digital, la experiencia busca evocar la sensación de
-            extrañeza, incomodidad y descolocamiento que produce la presencia de
-            un invitado no deseado. Más que adaptar literalmente la historia, el
-            proyecto explora cómo los entornos web pueden convertirse en
-            espacios narrativos que incomodan sutilmente al usuario, replicando
-            el clima inquietante y absurdo del cuento original. El resultado es
-            una experiencia inmersiva y fragmentada, que invita a habitar lo
-            incierto.
-            <br /> Proyecto hecho en colaboración con Alessandro Lucchesi y Sara Meche
-          </p>
+            Desde un diseño hecho en la clase de la clínica por Alejandro Torres
+            y María Paula Paez desarrollé la página web del laboratorio para la
+            Justicia Uniandes. La página está hecha en HTML, CSS y JavaScript.
         </div>
       </header>
       <section class="main-info">
         <img
-          src="Proyecto3/MainImage3.png"
+          src="Proyecto4/MainImage.png"
           alt="Imagen principal del Proyecto 1"
           class="main-image"
         />
@@ -42,32 +35,32 @@
       <section class="proyectos">
         <div class="grid">
           <div class="card">
-            <img src="Proyecto3/Gallery1.png" alt="Imagen 1 de la galería" />
+            <img src="Proyecto4/Gallery1.png" alt="Imagen 1 de la galería" />
           </div>
           <div class="card">
-            <img src="Proyecto3/Gallery2.png" alt="Imagen 2 de la galería" />
+            <img src="Proyecto4/Gallery2.png" alt="Imagen 1 de la galería" />
           </div>
           <div class="card">
-            <img src="Proyecto3/Gallery3.png" alt="Imagen 3 de la galería" />
+            <img src="Proyecto4/Gallery3.png" alt="Imagen 1 de la galería" />
           </div>
           <div class="card">
-            <img src="Proyecto3/Gallery4.png" alt="Imagen 4 de la galería" />
+            <img src="Proyecto4/Gallery4.png" alt="Imagen 1 de la galería" />
           </div>
         </div>
       </section>
       <div class="ver-mas-container">
-        <a href="https://the-doubtful-guest.glitch.me/" class="button"
+        <a
+          href="https://labjusticia.uniandes.edu.co/index.html"
+          class="button"
           >Ver más del proyecto</a
         >
         <a href="index.html" class="button">Volver al Inicio</a>
       </div>
     </main>
-
     <div id="lightbox-modal" class="lightbox-modal hidden">
       <span class="lightbox-close">&times;</span>
       <img class="lightbox-content" src="" alt="Imagen ampliada" />
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
