icon y media queries

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="icon.ico" />
   </head>
 
   <body>
@@ -32,7 +33,7 @@
       <header class="header">
         <div>
           <h1>Simón De Zubiría Restrepo</h1>
-          <p>Diseñador y desarrollador web</p>
+          <h2>Diseñador y desarrollador web</h2>
           <p>
             Me interesa profundamente la programación como una herramienta para
             crear experiencias visuales significativas, impactantes y
