--- a/proyecto5.html
+++ b/proyecto5.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto 1</title>
     <link rel="stylesheet" href="style.css" />
+       <link rel="icon" type="image/x-icon" href="icon.ico" />
   </head>
   <body>
     <div id="background-grid"></div>
