--- a/index.html
+++ b/index.html
@@ -16,17 +16,9 @@
   </head>
 
   <body>
-    <div id="intro-animation">
-      <!-- Panels that animate outwards -->
-      <div class="panel blue"></div>
-      <div class="panel black"></div>
-      <div class="panel white"></div>
-      <div class="panel blue"></div>
-      <div class="panel black"></div>
-      <div class="panel white"></div>
+    <div id="loader" class="loader-bg">
+      <div class="loader-spinner"></div>
     </div>
-
-    <!-- Background grid container -->
     <div id="background-grid"></div>
 
     <main class="hidden">
@@ -46,11 +38,8 @@
             ilustración, el 3D y las experiencias interactivas.
           </p>
           <a href="CVSimon.pdf" class="button" download>Descargar CV</a>
-                  <h1>Proyectos</h1>
-          <div>
-
-          </div>
-  
+          <h1>Proyectos</h1>
+          <div></div>
         </div>
       </header>
 
@@ -79,11 +68,9 @@
             </p>
           </a>
           <a href="proyecto5.html" class="card">
-            <img src="p5.jpg" alt="Imagen de Proyecto 5" />
-            <h3>Galería visual y audiovisual</h3>
-            <p>
-              Colección de imágenes y videos que muestran otras facetas mías
-            </p>
+            <img src="Proyecto5/tigres01.png" alt="Imagen de Proyecto 5" />
+            <h3>Otros territorios</h3>
+            <p>Exploraciones visuales, ideas sueltas y proyectos paralelos</p>
           </a>
         </div>
       </section>
