--- a/proyecto4.html
+++ b/proyecto4.html
@@ -8,6 +8,9 @@
        <link rel="icon" type="image/x-icon" href="icon.ico" />
   </head>
   <body>
+    <div id="loader" class="loader-bg">
+      <div class="loader-spinner"></div>
+    </div>
     <div id="background-grid"></div>
     <main class="hidden">
       <header class="header">
