--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
     })(window, document, 'script', 'dataLayer', 'GTM-PD48XPX8');</script>
   <!-- End Google Tag Manager -->
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VWN6FN080J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-VWN6FN080J');
+</script>
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PD48XPX8" height="0" width="0"
