--- a/proyecto1.html
+++ b/proyecto1.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="icon.ico" />
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VWN6FN080J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VWN6FN080J');
+</script>
   <body>
     <div id="loader" class="loader-bg">
       <div class="loader-spinner"></div>
